fix tag-list: wrap in small screens

--- a/components/card/card.css
+++ b/components/card/card.css
@@ -34,6 +34,7 @@
 
 .card__tag-list {
   display: flex;
+  flex-wrap: wrap;
   gap: 5px;
   margin-top: 20px;
 }
